force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Account_Owner_Related_to_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Owner_Related_to_Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account Owner</description>
    <inlineHelpText>This indicates the account owner related to this beneficiary.</inlineHelpText>
    <label>Account Owner Related to Beneficiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <type>Lookup</type>
</CustomField>