force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. This identifies if the beneficiary is an individual or an entity.</description>
    <inlineHelpText>This identifies if the beneficiary is an individual or an entity.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>