force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set during New Customer Onboarding if a beneficiary has been added. This field indicates the deposit record that the beneficiary is related to.</description>
    <label>Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>