force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Designated_Beneficiary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Designated_Beneficiary_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the individual beneficiary is considered a &quot;designated beneficiary&quot; for election purposes.</description>
    <inlineHelpText>If true the individual beneficiary is considered a &apos;designated beneficiary&apos; for election purposes.</inlineHelpText>
    <label>Designated Beneficiary Indicator</label>
    <type>Checkbox</type>
</CustomField>