force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Party_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Party_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies whether the IRA plan beneficiary is an individual or an entity.</description>
    <inlineHelpText>Specifies whether the IRA plan beneficiary is an individual or an entity.</inlineHelpText>
    <label>Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>