force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the entity type of the beneficiary.</description>
    <inlineHelpText>Specifies the entity type of the beneficiary.</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Domestic Government Unit</fullName>
            </value>
            <value>
                <fullName>Foreign Government Unit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>