force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Spouse_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spouse_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the beneficiary is the spouse of the IRA owner.</description>
    <inlineHelpText>If true the beneficiary is the spouse of the IRA owner.</inlineHelpText>
    <label>Spouse Indicator</label>
    <type>Checkbox</type>
</CustomField>