force-app/main/default/objects/LLC_BI__Beneficiary__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. Specifies the type of beneficiary.</description>
    <inlineHelpText>Specifies the type of beneficiary.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Beneficiary</fullName>
            </value>
            <value>
                <fullName>Contingent Beneficiary</fullName>
            </value>
            <value>
                <fullName>Primary Successor Beneficiary</fullName>
            </value>
            <value>
                <fullName>Contingent Successor Beneficiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>